# Learning-Platform

./: .env.example  .gitignore  README.md  alembic.ini  learning-platform-mvp-requirements.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/agents/: 1-requirement-agent.agent.md  2-plan-and-design-agent.agent.md  3-epic-and-tasks-agent.agent.md  3.5-build-orchestrator-agent.agent.md  4-develop-agent.agent.md  5-ui-develop-agent.agent.md  6-automation-test-agent.agent.md  7-security-agent.agent.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
backlog/: dependency-graph.json  execution-log.md  execution-plan.md
backlog/epics/: EPIC-001.md  EPIC-002.md  EPIC-003.md  EPIC-004.md  EPIC-005.md  EPIC-006.md  EPIC-007.md
backlog/stories/: STORY-001.md  STORY-002.md  STORY-003.md  STORY-004.md  STORY-005.md  STORY-006.md  STORY-007.md  STORY-008.md  STORY-009.md  STORY-010.md  STORY-011.md  STORY-012.md  STORY-013.md  STORY-014.md  STORY-015.md  STORY-016.md  STORY-017.md  STORY-018.md  STORY-019.md  STORY-020.md  STORY-021.md  STORY-022.md  STORY-023.md  STORY-024.md  STORY-025.md  STORY-026.md
backlog/tasks/: TASK-001.md  TASK-002.md  TASK-003.md  TASK-004.md  TASK-005.md  TASK-006.md  TASK-007.md  TASK-008.md  TASK-009.md  TASK-010.md  TASK-011.md  TASK-012.md  TASK-013.md  TASK-014.md  TASK-015.md  TASK-016.md  TASK-017.md  TASK-018.md  TASK-019.md  TASK-020.md  TASK-021.md  TASK-022.md  TASK-023.md  TASK-024.md  TASK-025.md  TASK-026.md  TASK-027.md  TASK-028.md  TASK-029.md  TASK-030.md  TASK-031.md  TASK-032.md  TASK-033.md  TASK-034.md  TASK-035.md  TASK-036.md  TASK-037.md  TASK-038.md  TASK-039.md  TASK-040.md  (+6 more)
docs/: branch-protection-setup.md  change-log.md
docs/design/: HLD.md
docs/requirements/: BRD.md
docs/testing/: TestPlan.md
src/: __init__.py  main.py  models.py  sanitize.py  seed.py
src/ai_generation/: __init__.py  github_models_client.py  prompt_service.py  prompt_templates.py  router.py  schemas.py  service.py
src/auth/: __init__.py  dependencies.py  router.py  schemas.py  service.py
src/config/: __init__.py  settings.py
src/course_management/: __init__.py  lesson_service.py  module_service.py  router.py  sanitiser.py  (+2 more)
templates/: Task.md
tests/: __init__.py  conftest.py
(+97 files in other folders)
