[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "learning-platform"
version = "0.1.0"
description = "AI-assisted internal learning platform MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy[asyncio]==2.0.36",
    "aiosqlite==0.20.0",
    "alembic==1.14.0",
    "pydantic-settings==2.7.0",
    "python-jose[cryptography]==3.4.0",
    "passlib[bcrypt]==1.7.4",
    "httpx==0.28.1",
    "bleach==6.2.0",
    "jinja2==3.1.6",
    "python-multipart==0.0.22",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "httpx==0.28.1",
    "respx==0.21.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
